fix: test websocket